--- a/Entrega I/01.Historia.tex
+++ b/Entrega I/01.Historia.tex
@@ -1,6 +1,6 @@
 \section{Introducción histórica del dodecafonismo}\label{ch:historia}
 
-En esta sección describiremos cuál fue el ambiente histórico y filosófico en el que se cultivó el primer modelo de serialismo musical: el \textbf{dodecafonismo}. A través de su historia analizaremos por qué el serialismo no fue una decisión aleatoria ni espontánea, sino que surgió de una necesidad estética de aquel periodo.
+En esta sección describiremos cuál fue el ambiente histórico y musical en el que se cultivó el primer modelo de serialismo musical: el \textbf{dodecafonismo}. A través de su historia analizaremos por qué el serialismo no fue una decisión aleatoria ni espontánea, sino que surgió de una necesidad estética de aquel periodo.
 %
 Vamos a comenzar con una breve crónica de la disonancia, tras lo cual describiremos las fases por las que el creador del dodecafonismo, Arnold Schoenberg, tuvo que pasar antes de concebirlo. %La disonancia desempeñó un papel fundamental en la génesis del dodecafonismo, como veremos enseguida.
 
@@ -13,13 +13,13 @@ En la Antigua Grecia, la armonía musical se consideraba unida al resto del unive
 {\footnotesize (Tomado de \cite{mha} J. de Aixquivel, \textit{Memorias de Historia Antigua}, 1989.)}
 \end{quote}
 
-Es bien sabido que la Escuela de Pitágoras, con su estudio sobre proporciones entre notas, buscaba encontrar cuáles eran los intervalos más consonantes: eran aquellos cuyo ratio formaba una relación sencilla. El intervalo de octava era consonante porque su ratio era de 2:1, y de igual manera ocurría con los intervalos de quinta (3:2) y cuarta (4:3), a los que Aristóxeno comenzó a llamar \textit{sýmph$\bar{o}$nos} ($\sigma\acute{\upsilon}\mu\varphi\omega\nu o\varsigma$) \cite{cons}. En cambio, a los intervalos no tan sencillos se los llamaba \textit{diáph$\bar{o}$nos} ($\delta\iota\acute{\alpha}\varphi\omega\nu o\varsigma$), y fue entonces cuando se le dio nombre a la disonancia.
+Es bien sabido que la Escuela de Pitágoras, con su estudio sobre proporciones entre notas, buscaba encontrar cuáles eran los intervalos más consonantes: eran aquellos cuya proporción formaba una relación sencilla. El intervalo de octava era consonante porque su ratio era de 2:1, y de igual manera ocurría con los intervalos de quinta (3:2) y cuarta (4:3), a los que Aristóxeno comenzó a llamar \textit{sýmph$\bar{o}$nos} ($\sigma\acute{\upsilon}\mu\varphi\omega\nu o\varsigma$) \cite{cons}. En cambio, a los intervalos no tan sencillos se los llamaba \textit{diáph$\bar{o}$nos} ($\delta\iota\acute{\alpha}\varphi\omega\nu o\varsigma$), y fue entonces cuando se le dio nombre a la disonancia.
 
 Ya en la Edad Media, la polifonía fue forjando normas sobre su uso. La primera regla compositiva de la música occidental \textemdash según Knud Jeppesen~\cite{jeppesen}\textemdash~fue la \emph{regla franconiana}, que expresaba que las disonancias debían ocurrir en la parte débil del compás, mientras que las consonancias en la parte fuerte. Es así como los compositores trenzaban consonancia y disonancia al tejer los hilos de la música.
 
-Poco a poco la disonancia pasó a ser usada como floritura melódica: en notas de paso, apoyaturas o retardos, entre otras. Esta función melódica fue impregnando el contrapunto hasta llegar a ser pieza clave en la continuidad de las voces. Adquirió entonces una nueva función contrapuntística, ¿y quién no se ha deleitado al escuchar una disonancia \textit{bachiana}?
+Poco a poco la disonancia pasó a ser usada como floritura melódica: en notas de paso, apoyaturas o retardos, entre otras. Esta función melódica fue impregnando el contrapunto hasta llegar a ser pieza clave en la continuidad y el enlace de las voces. Adquirió entonces una nueva función contrapuntística. ¿Quién no se ha deleitado al escuchar una disonancia \textit{bachiana}?
 
-Pero la disonancia estaba aún inscrita a la tonalidad reinante. No fue hasta la introducción de acordes extraños que la disonancia pasó a ser el centro del interés musical, y fue \textit{in crescendo} apropiándose del foco de atención hasta llegar a ser más valiosa aún que la consonancia. Para ello hubo que esperar hasta el siglo XIX, que fue testigo de un asombroso desarrollo del sistema armónico que acabó por quebrantar todas las preconcepciones musicales anteriores.
+Pero la disonancia estaba aún circunscrita a la tonalidad reinante. No fue hasta la introducción de acordes extraños que la disonancia pasó a ser el centro del interés musical, y fue \textit{in crescendo} apropiándose del foco de atención hasta llegar a ser más valiosa aún que la consonancia. Para ello hubo que esperar hasta el siglo XIX, que fue testigo de un asombroso desarrollo del sistema armónico que acabó por quebrantar todas las concepciones musicales anteriores.
 
 Para más información sobre la disonancia y su fascinante historia, recomendamos al lector el texto de Felipe Aguirre~\cite{aguirre}.
 
@@ -39,11 +39,11 @@ Esta época culminó con los dramas musicales de Richard Wagner, en los que todos 
 \end{center}
 \end{figure}
 
-La idea del \emph{Gesamtkunstwerk} la desarrolló alrededor de 1850, y la plasmó en su totalidad en su ciclo de cuatro óperas \href{https://www.youtube.com/watch?v=1PBhlPeTJ_g}{\textit{Der Ring des Nibelungen}}, estrenado en 1876. Wagner controló y creó cada aspecto de la tetralogía, desde la música hasta el libreto, el vestuario y la escenografía. Incluso mandó crear su propia sala de conciertos en Bayreuth, el \emph{Festspielhaus}, para que el escenario se adecuara a sus ideas sobre el pensamiento y la cultura musical; véase~\cite{kinney}.
+La idea del \emph{Gesamtkunstwerk} la desarrolló alrededor de 1850, y la plasmó en su totalidad en su ciclo de cuatro óperas \href{https://www.youtube.com/watch?v=1PBhlPeTJ_g}{\textit{Der Ring des Nibelungen}}, estrenado en 1876. Wagner controló y creó cada aspecto de la tetralogía, desde la música hasta el libreto, el vestuario y la escenografía. Incluso mandó crear su propia sala de conciertos en Bayreuth, el \emph{Festspielhaus}, para que el escenario se adecuara a sus ideas sobre el pensamiento y la cultura musical; véase~\cite{kinney} para más detalles.
 
 Así, a ojos de compositores posteriores, se habían agotado todas las posibilidades de la música tonal, y quizás ya había comenzado el viraje hacia el predominio de la disonancia con su abundante uso del cromatismo, como en el famoso primer acorde del drama musical \href{https://www.youtube.com/watch?v=SF4zN-Okonc}{\textit{Tristan und Isolde}} (1865). Consta de las notas fa-si-$\mbox{re\#}$-$\mbox{sol\#}$, y sus intervalos desde el fa son una cuarta aumentada, una sexta aumentada y una novena aumentada.
 
-Después de Wagner, otros compositores también estuvieron a las puertas de emancipar la disonancia, de desatarla de las ataduras que imponía la tonalidad. Por ejemplo, el gran compositor Gustav Mahler conseguía reflejar en sus sinfonías dos realidades paralelas: tanto la delicada fragilidad de la tradición anterior como la inminencia de su ruptura. El ejemplo más claro es el \href{https://www.youtube.com/watch?v=vHyV8noUXC0}{Adagio} de su Décima Sinfonía, que contiene una disonancia con once de las doce notas de la escala cromática. Y es que, sin lugar a dudas, la tonalidad ya preveía que iba a ser reemplazada.
+Después de Wagner, otros compositores también estuvieron a las puertas de emancipar la disonancia, de desatarla de las ataduras que imponía la tonalidad. Por ejemplo, el gran compositor Gustav Mahler conseguía reflejar en sus sinfonías dos realidades paralelas: tanto la delicada fragilidad de la tradición anterior como la inminencia de su ruptura. El ejemplo más claro es el \href{https://www.youtube.com/watch?v=vHyV8noUXC0}{Adagio} de su Décima Sinfonía, que contiene una disonancia con once de las doce notas de la escala cromática. Y es que, sin lugar a dudas, ya se preveía que la tonalidad iba a reemplazarse.
 
 \begin{figure}[h]
 \begin{center}
@@ -66,20 +66,20 @@ Fuertemente influido por Wagner y Mahler desde su adolescencia, Schoenberg comen
 
 Para él, la música no estaba intrínsecamente dirigida a una tónica. En las progresiones, lo importante era el paso de un acorde a otro, y no hacia dónde se dirigían estos. Además, él opinaba que se debían poder utilizar las notas de los modos eclesiásticos libremente, por lo que consideraba las notas no diatónicas tan válidas como las diatónicas. Esto hacía imposible distinguir unas de otras, y apenas se podía identificar la tónica. De esta, y de otras muchas formas, Schoenberg conseguía que la jerarquía tonal quedara desestabilizada~\cite{kinney}.
 
-De esta época es su primera obra importante, \href{https://www.youtube.com/watch?v=vqODySSxYpc}{\emph{Verklärte Nacht}} ({\it Noche transfigurada}), Op. 4. Compuesto en 1899, este sexteto de cuerdas está inspirado por el poema homónimo de Richard Dehmel. La música, según su autor, expresa el paseo de un hombre y una mujer en medio del abrazo de la naturaleza.  Aunque en la obra aún prevalece la armonía tradicional basada en acordes, Schoenberg sitúa al oyente en un terreno de indefinición tonal, no sólo en el plano armónico sino también en el melódico. Además, hace uso del acorde de novena invertido, inexistente hasta entonces y, por tanto, rechazado por la crítica~\cite{diaz}.
+De esta época es su primera obra importante, \href{https://www.youtube.com/watch?v=vqODySSxYpc}{\emph{Verklärte Nacht}} ({\it Noche transfigurada}), Op. 4. Compuesto en 1899, este sexteto de cuerdas está inspirado por el poema homónimo de Richard Dehmel. La música, según su autor, expresa el paseo de un hombre y una mujer en medio de la naturaleza.  Aunque en la obra aún prevalece la armonía tradicional basada en acordes, Schoenberg sitúa al oyente en un terreno de indefinición tonal, no sólo en el plano armónico sino también en el melódico. Además, hace uso del acorde de novena invertido, inexistente hasta entonces y, por tanto, rechazado por la crítica~\cite{diaz}.
 
-Tras pasar por la etapa tonal posromántica, y debido a su convicción en la inexorabilidad de la evolución de la música hacia el cromatismo total, en 1908 Schoenberg se desligó de la tonalidad completamente con el ciclo de canciones \href{https://www.youtube.com/watch?v=3iXsKhaZB2Q}{\emph{Das Buch der Hängenden Gärten}}. 
+Tras pasar por la etapa tonal post-romántica, y debido a su convicción en la inexorabilidad de la evolución de la música hacia el cromatismo total, en 1908 Schoenberg se desligó de la tonalidad completamente con el ciclo de canciones \href{https://www.youtube.com/watch?v=3iXsKhaZB2Q}{\emph{Das Buch der Hängenden Gärten}}. 
 
-A partir de entonces se dedicó a componer fragmentos muy breves cuya estructura era definida por motivos y no por la armonía. Era esto lo que solía ocurrir en formas musicales anteriores como la forma sonata. A este periodo en sus composiciones se le llama atonalidad libre, aunque cabe destacar que Schoenberg rechazaba fervientemente este término:
+A partir de entonces se dedicó a componer fragmentos muy breves cuya estructura era definida por {\bf motivos} y no por la armonía. Era esto lo que solía ocurrir en formas musicales anteriores como la forma sonata. A este periodo en sus composiciones se le llama atonalidad libre, aunque cabe destacar que Schoenberg rechazaba fervientemente este término:
 
 \begin{quote}
-\emph{La expresión ``música atonal'' es de lo más desafortunada \textemdash es como llamar a volar ``el arte de no caer'' o nadar ``el arte de no ahogarse''.}\\
+\emph{La expresión ``música atonal'' es de lo más desafortunada \textemdash es como llamar a volar ``el arte de no caer'' o a nadar ``el arte de no ahogarse''.}\\
 {\footnotesize Mencionado en \cite{hauer} A. Schoenberg, \emph{Hauer's Theories}, en \emph{Style and Idea}, 1923.}
 \end{quote}
 
 \noindent A este periodo pertenece también su famoso ciclo de canciones \href{https://www.youtube.com/watch?v=vQVkbKULKpI}{\emph{Pierrot Lunaire}}, Op. 21 (1912). Su nombre completo es \textit{Tres veces siete poemas de Pierrot Lunaire de Albert Giraud}, ya que está dividida en 3 grupos de 7 canciones cada uno, cuyos textos son una selección de 21 poemas del ciclo homónimo de Albert Giraud. 
 
-Se encuentran en ella abundantes referencias al número 7. Schoenberg hace un uso extensivo de motivos de 7 notas a lo largo de la obra, mientras que el conjunto musical que la interpreta, incluyendo al director, consta de 7 miembros. De hecho, a este conjunto de instrumentos \textemdash flauta, clarinete, violín, violonchelo, piano y voz\textemdash~se le ha dado el nombre de \textit{ensemble Pierrot} en su honor.  Otros números importantes en la obra son el 3 y el 13. Cada poema consta de 13 líneas, mientras que la primera línea de cada poema aparece 3 veces: en las líneas 1, 7 y 13.
+Se encuentran en ella abundantes referencias al número 7. Schoenberg hace un uso extensivo de motivos de 7 notas a lo largo de la obra, mientras que el conjunto musical que la interpreta, incluyendo al director, consta de 7 miembros. De hecho, a este conjunto de instrumentos \textemdash flauta, clarinete, violín, violonchelo, piano y voz\textemdash~se le ha dado el nombre de \textit{ensemble Pierrot} en su honor.  Otros números importantes en la obra son el 3 y el 13. Cada poema consta de 13 líneas, mientras que la primera línea de cada poema aparece 3 veces, en las líneas 1, 7 y 13.
 
 En esta obra no sólo hay una ausencia total de relaciones tonales, sino que el tratamiento vocal evita también cualquier relación estética con las técnicas tradicionales: es un \emph{Sprechgesang}, un canto hablado. De hecho, Schoenberg se refiere a estas piezas no como canciones, sino como melodramas. Véase~\cite{diaz} para más información.
 
@@ -90,7 +90,7 @@ Por aquella época sufrió crisis en varios aspectos de su vida. En lo personal, s
 
 Tras el final de la guerra, en 1919, Schoenberg fundó la Sociedad para Interpretaciones Musicales Privadas junto a sus discípulos y amigos Alban Berg y Anton Webern. Schoenberg, Berg y Webern se autodenominaron la Segunda Escuela de Viena en honor al grupo de compositores del siglo XVIII Haydn, Mozart y Beethoven, quienes formaban la Primera Escuela de Viena.
 
-En la Sociedad para Interpretaciones Musicales Privadas se presentaban músicas contemporáneas en circunstancias que favorecieran su adecuada apreciación. Así se evitaba que dichas obras, al no ser entendidas por el público, fueran inmediatamente rechazadas. Las obras de compositores como Mahler, Debussy, Bartók, Ravel, Strauss y Stravinsky fueron incluidas en los programas de conciertos organizados por la Sociedad.
+En la Sociedad para Interpretaciones Musicales Privadas se presentaban música contemporánea en circunstancias que favorecieran su adecuada apreciación. Así se evitaba que dichas obras, al no ser entendidas por el público, fueran inmediatamente rechazadas. Las obras de compositores como Mahler, Debussy, Bartók, Ravel, Strauss y Stravinsky se incluyeron en los programas de conciertos organizados por la Sociedad.
 
 En este contexto Schoenberg pudo reflexionar sobre sus técnicas compositivas, y al fin publicó en 1923 su ensayo \emph{Método de composición con doce sonidos}~\cite{scho}, donde se describían por primera vez los axiomas del dodecafonismo. Estos axiomas constituían la solución al problema de la atonalidad libre que tanto le había estado atormentando durante una década.
 
@@ -98,4 +98,4 @@ Su primera obra íntegramente dodecafónica, publicada también en 1923, es la Suit
 
 Las series utilizadas en la Suite Op. 25 servirán de ejemplo en este texto, y su tercer movimiento, \href{https://www.youtube.com/watch?v=scwNtGdop6w}{Musette}, será estudiado y analizado en el apartado \ref{musette} con el fin de entender una obra dodecafónica en toda su extensión. A continuación el lector podrá escuchar la Suite para piano Op. 25:
 
-\xxx{Incluir vídeo}
+\url{https://www.youtube.com/watch?v=39x0Ypi4gTc}
