--- a/Entrega I/03.Suite.tex
+++ b/Entrega I/03.Suite.tex
@@ -19,19 +19,19 @@
 		Se han realizado estudios -- como el de Martha Hyde \cite{hyde} -- en los que se limitan las series utilizadas en la Suite a cuatro: $T^0$, $T^6$, $I$ e $IT^6$, pero ya que el objetivo de este texto no es analizar la obra entera se dejará esta cuestión para análisis posteriores.
 		
 	\subsection{Descripción de la Suite op. 25}
-		Schoenberg realiza en la serie $\sigma$ una partición triple; es decir, la serie se divide en tres tetracordios, y cada uno de ellos contiene un intervalo de tritono. El último tetracordio, si se retrograda, consta de las notas 10--9--0--11, que en notación germánica es la secuencia BACH. Esto puede ser un homenaje al compositor Johann Sebastian Bach (1685\textemdash1750), ya que Schoenberg admiraba a los grandes compositores anteriores a él por las estructuras formales de sus obras. Para más información, véase~\cite{xiao}.
+		Schoenberg realiza en la serie $\sigma$ una partición triple; es decir, la serie se divide en tres tetracordos, y cada uno de ellos contiene un intervalo de tritono. El último tetracordo, si se retrograda, consta de las notas 10--9--0--11, que en notación germánica es la secuencia BACH. Esto puede ser un homenaje al compositor Johann Sebastian Bach (1685\textemdash1750), ya que Schoenberg admiraba a los grandes compositores anteriores a él por las estructuras formales de sus obras. Para más información, véase~\cite{xiao}.
 		
-		Otro posible homenaje a Bach y sus contemporáneos barrocos es precisamente la forma de la obra: es una Suite, género cultivado durante los siglos XVII y XVIII que se compone de una variedad de danzas. La Suite de Schoenberg está formada por seis danzas: un Preludio, una Gavota, una Musette, un Intermezzo \textemdash que no tiene influencia barroca sino más bien de Brahms, otro modelo para Schoenberg\textemdash, un Minueto con Trío y una Giga. Además, el estilo, la textura \textemdash contrapuntística, típicamente barroca\textemdash~ y la estructura de cada danza se corresponden con los estilos, texturas y estructuras de las danzas homónimas del periodo bachiano.
+		Otro posible homenaje a Bach y sus contemporáneos barrocos es precisamente la forma de la obra: es una suite, género cultivado durante los siglos XVII y XVIII que se compone de una variedad de danzas. La Suite de Schoenberg está formada por seis danzas: un preludio, una gavota, una musette, un intermezzo \textemdash que no tiene influencia barroca sino más bien de Brahms, otro modelo para Schoenberg\textemdash, un minueto con trío y una giga. Además, el estilo, la textura \textemdash contrapuntística, típicamente barroca\textemdash~ y la estructura de cada danza se corresponden con los estilos, texturas y estructuras de las danzas homónimas del periodo bachiano.
         
-        Por ser ésta su primera obra totalmente dodecafónica, Schoenberg la utilizó como una muestra al mundo de las posibilidades de su nuevo método compositivo. Fue también por lo que tomó un formato tan variado como una Suite: así podía en una misma obra componer con estilos tan distintos como los de las distintas danzas.
+        Por ser ésta su primera obra totalmente dodecafónica, Schoenberg la utilizó como una muestra al mundo de las posibilidades de su nuevo método compositivo. Fue también por lo que tomó un formato tan variado como una suite: así podía en una misma obra componer con estilos tan distintos como los de las distintas danzas.
         
-        Al componer la obra, Schoenberg trata cada tetracordio como una subunidad individual. Los superpone contra otras series del espectro también divididas, o utiliza sus notas como un solo acorde cuatríada. Estas divisiones no sólo sirven para hacer la serie más reconocible o añadir cohesión a la obra, sino que además facilitan el desarrollo de la serie específicamente en el estilo de cada danza.
+        Al componer la obra, Schoenberg trata cada tetracordo como una subunidad individual. Los superpone contra otras series del espectro también divididas, o utiliza sus notas como un solo acorde cuatríada. Estas divisiones no sólo sirven para hacer la serie más reconocible o añadir cohesión a la obra, sino que además facilitan el desarrollo de la serie específicamente en el estilo de cada danza.
 		
 	\subsection{Análisis de la Musette}
 	\label{musette}
 		En el tercer movimiento de la Suite, la Musette, Schoenberg recrea la danza barroca que toma su nombre del instrumento homónimo: la \emph{cornamusa}, de la familia de la gaita. La música compuesta para estos instrumentos suele consistir en una melodía acompañada por una nota pedal, que se traduce aquí en la presencia de un bordón sobre el sol$\natural$ (nota 7). Esta nota se extrae de cada una de las series utilizadas y se forma con ella un ostinato rítmico en la mano izquierda del piano. Con el resto de sonidos de cada serie, Schoenberg vuelve a emular el estilo de la danza barroca y articula un discurso polifónico a dos voces con ritmos esencialmente cortos.
 		
-		A partir de la doble barra del compás 9, el re$\flat$ (nota 1) acompaña a sol$\natural$ y ambos crean un doble bordón en la mano izquierda. La elección de esas dos notas está estrechamente relacionada con la tradicional relación de quinta justa formada por sol$\natural$ y re$\natural$ en la música tonal. Schoenberg sustituye las quintas justas tonales por los tritonos dodecafónicos, subrayando aún más su <<emancipación de la disonancia>>.
+		A partir de la doble barra del compás 9, el re$\flat$ (nota 1) acompaña a sol$\natural$ y ambos crean un doble bordón en la mano izquierda. La elección de esas dos notas está estrechamente relacionada con la tradicional relación de quinta justa formada por sol$\natural$ y re$\natural$ en la música tonal. Schoenberg sustituye las quintas justas tonales por los tritonos dodecafónicos, subrayando aún más su {\it emancipación de la disonancia}.
 		
 		Además de las similitudes texturales, rítmicas y armónicas, la Musette de Schoenberg comparte estructura formal con las danzas barrocas. Y esta semejanza es quizás la más notable, ya que fue la búsqueda de estructura formal lo que inspiró a Schoenberg a desarrollar su método compositivo. La Musette barroca, como todos los movimientos de danza, presenta una estructura binaria con simetría tonal: empieza y acaba por la misma tonalidad, mientras que el centro es zona de desarrollo. Schoenberg despoja de funcionalidad tonal a esa simetría, madre de la forma sonata, y la aplica a su composición dodecafónica.
 		
@@ -56,7 +56,7 @@
 				\end{matrix}
 			&T^6&IT^6&T^0&T^0&\mathbf{c}.\mathbf{31}\\\end{array}\]
 		
-		A continuación se encuentra el análisis serial completo de la Musette, tomado de~\cite{clercq}:
+		A continuación se encuentra el análisis serial completo de la Musette:
 
 \newpage
 \begin{figure}[!h]
